# TmDet

./: .env  .env.example  .env_assembly  .env_cif  .gitignore  .gitlab-ci.yml  1a0s.cif  1aty.cif  1aty.tr.cif  CMakeLists.txt  Dockerfile  Doxyfile  README  README.md  REUSE.toml  build-image.sh  build-tmdet.sh  check.sh  discover.sh  docker-compose.yml  install.sh  log  minimal_ALA_with_Ag.cif  run-af.sh  run-af2.sh  run-tmdet.sh  run.sh  runAf.sh  runAf2.sh  runAll.sh
cmake/: FindPdbLib.txt
data/: 1a0s.cif  AF-Q7Z4N2-F1-model_v4.cif  polymer_filter.txt  test.xml  tm-codes.txt
data/xml_3.0/: 1e0p.xml  2iko.xml
data/xml_4.0/: 1e0p.xml
old/src/: Xml.cpp  Xml.hpp  chain.c  geom.c  mlsqf.c  optim.c  util.c
scripts/: get-chemical-component-directory.sh
src/: CMakeLists.txt  Config.hpp  Version.hpp  config.hpp
src/DTOs/: Atom.cpp  Atom.hpp  Chain.cpp  Chain.hpp  Dssp.cpp  Dssp.hpp  Protein.cpp  Protein.hpp  Region.cpp  Region.hpp  Residue.cpp  Residue.hpp  SecStrVec.hpp  Struct.cpp  Struct.hpp  TmdetStruct.cpp  TmdetStruct.hpp  Xml.cpp  Xml.hpp
src/DTOs/Xml/: BaseReader.hpp  BaseWriter.cpp  BaseWriter.hpp  Constants3.hpp  Constants4.hpp  Reader3.cpp  Reader3.hpp  Writer.cpp  Writer.hpp  Writer3.cpp  Writer3.hpp  Writer4.cpp  Writer4.hpp
src/DTOs/XmlRW/: BaseReader.hpp  Constants3.hpp  Constants4.hpp  Reader.cpp  Reader.hpp  Reader3.cpp  Reader3.hpp  Reader4.cpp  Reader4.hpp  Writer.cpp  Writer.hpp  Writer3.cpp  Writer3.hpp
src/Engine/: Annotator.cpp  Annotator.hpp  BetaAnnotator.cpp  BetaAnnotator.hpp  BlendedOptimizer.cpp  BlendedOptimizer.hpp  BlendedSideDetector.cpp  BlendedSideDetector.hpp  CurvedOptimizer.cpp  CurvedOptimizer.hpp  CurvedSideDetector.cpp  CurvedSideDetector.hpp  Fragmenter.cpp  Fragmenter.hpp  Optim.cpp  Optim.hpp  Optimizer.cpp  Optimizer.hpp  Organizer.cpp  Organizer.hpp  PlaneOptimizer.cpp  PlaneOptimizer.hpp  PlaneSideDetector.cpp  PlaneSideDetector.hpp  RegionHandler.cpp  RegionHandler.hpp  Rotator.cpp  Rotator.hpp  SideDetector.cpp  SideDetector.hpp
src/Exceptions/: FileNotFoundException.hpp  IOException.hpp  MissingEnvironmentKeyException.hpp  NoProteinStructureException.hpp  SyntaxErrorException.hpp
src/Helpers/: Gzip.cpp  Gzip.hpp  Pymol.cpp  Pymol.hpp  String.cpp  String.hpp  Vector.cpp  Vector.hpp
src/Optim/: Optim.cpp  Optim.hpp  Organizer.cpp  Organizer.hpp  Rotator.cpp  Rotator.hpp
src/Services/: ChemicalComponentDirectoryService.cpp  ChemicalComponentDirectoryService.hpp  ConfigurationService.cpp  ConfigurationService.hpp  CurlWrapperService.cpp  CurlWrapperService.hpp  PromotifService.cpp  PromotifService.hpp  UniTmpService.cpp  UniTmpService.hpp
src/System/: Arguments.cpp  Arguments.hpp  Command.hpp  Config.hpp  Date.hpp  Environment.cpp  Environment.hpp  FilePaths.hpp  Logger.hpp  ProgressBar.cpp  ProgressBar.hpp  Version.hpp
src/TmdetLib/: TmdetChainTypes.hpp  TmdetMembrane.cpp  TmdetMembrane.hpp  TmdetMembraneTypes.hpp  TmdetProteinTypes.hpp  TmdetRegionTypes.hpp  TmdetStruct.cpp  TmdetStruct.hpp  TmdetXml.cpp  TmdetXml.hpp
src/Types/: Atom.hpp  Chain.hpp  Membrane.hpp  Oligomer.hpp  PdbAtomTypes.cpp  PdbAtomTypes.hpp  PdbChainTypes.hpp  PdbMethodTypes.hpp  PdbMoleculeTypes.hpp  PdbPolimerTypes.hpp  Protein.hpp  Region.hpp  Residue.cpp  Residue.hpp  SecStruct.hpp
src/Utils/: Alignment.cpp  Alignment.hpp  Args.cpp  Args.hpp  CifUtil.cpp  CifUtil.hpp  Cluster.cpp  Cluster.hpp  Dssp.cpp  Dssp.hpp  Filter.cpp  Filter.hpp  Fragment.cpp  Fragment.hpp  Graph.cpp  Graph.hpp  Md5.cpp  Md5.hpp  MyDssp.cpp  MyDssp.hpp  NeighBors.hpp  Oligimer.hpp  Oligomer.hpp  Optim.cpp  Optim.hpp  Rotator.cpp  Rotator.hpp  SecStrVec.cpp  SecStrVec.hpp  Surface.cpp  Surface.hpp  Symmetry.cpp  Symmetry.hpp  Xml.cpp  Xml.hpp  args.cpp  args.hpp  pdbArgs.cpp  pdbArgs.hpp  pdbDist.cpp  (+3 more)
src/VOs/: Atom.hpp  BioMatrix.hpp  CR.hpp  Chain.cpp  Chain.hpp  HBond.hpp  Matrix.hpp  Membrane.hpp  Modification.hpp  Protein.cpp  Protein.hpp  Region.hpp  Residue.cpp  Residue.hpp  SecStrVec.hpp  Slice.hpp  TMatrix.hpp  Xml.cpp  Xml.hpp
src/ValueObjects/: Atom.hpp  BioMatrix.hpp  Chain.cpp  Chain.hpp  HBond.hpp  Matrix.hpp  Membrane.hpp  Modification.hpp  Protein.cpp  Protein.hpp  Region.hpp  Residue.cpp  Residue.hpp  SecStrVec.hpp  Struct.hpp  TMatrix.hpp  TmdetStruct.cpp  TmdetStruct.hpp  Xml.cpp  Xml.hpp
src/cli/: argTest.cpp  domdist.cpp  domdist_af.cpp  dssp.cpp  fragment_cif.cpp  test.cpp  test2.cpp  tmdet.cpp
tests/: .gitignore  CMakeLists.txt  check_gdb_stacktraces.php  collect_segfault_residues.php  composer.json  getDiffDetails.php  tmdiff.php
tests/AlphaFold/: composer.json
tests/AlphaFold/src/: Main.php
tests/compare/: composer.json  main.php  tmp
tests/compare/Compare/: Compare.php  Helper.php
tests/compare/Compare/Xml/: Constant3.php  Constant4.php  Xml3.php  Xml4.php
tests/curved/: composer.json  res
tests/curved/src/: Main.php
tests/ifh/: composer.json  res
tests/ifh/src/: Main.php
tests/loops/: composer.json
tests/loops/src/: Main.php
tests/scripts/: check_gdb_stacktraces.php  collect_segfault_residues.php  count_struct_sheet_order_lines.sh
tests/tests/: PdbtmDifferencesTest.php  TmDetDsspTest.php
tests/tests/Constants/: FileSystem.php
tests/tests/Exceptions/: FileException.php
tests/tests/Services/: AbstractProcessRunner.php  DifferenceFlags.php  DsspRunner.php  PdbtmComparator.php  PdbtmDsspRunner.php  StructurePreFilter.php  TmDetDsspRunner.php  Tmdet30Runner.php
tests/tests/Utils/: PdbEnt.php
tests/units/: alignmentTest.cpp  apiCallTest.cpp  dsspTest.cpp  ioTest.cpp  linalgTest.cpp  oligomerTest.cpp  secondaryStructVectorTest.cpp  unselectPolymersTest.cpp
tests/web/: cif.php  index.php  json.php
tests/web/css/: molstar_viewer.css
tests/web/js/: tm_molstar.js
